--- a/index.css
+++ b/index.css
@@ -131,22 +131,22 @@ body {
 .page-right-body,.favContent,.likeContent {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-  gap: 14px;
   row-gap: 35px;
   padding: 20px;
+  margin-left: 20px;
   justify-content: center;
 }
 .card {
-  width: 350px;
-  height: 250px;
+  width: 240px;
+  height: 400px;
   border: 1px solid #ddd;
   border-radius: 10px;
   overflow: hidden;
   box-shadow: 0 0 2px 2px rgb(188, 101, 101);
 }
 .photo {
-  width: 100%;
-  height: 170px;
+  width: 240px;
+  height: 320px;
 }
 .photo img {
   width: 100%;
@@ -155,12 +155,19 @@ body {
 }
 .content {
   display: flex;
-  padding: 10px;
+  padding-left: 10px;
   align-items: center;
   justify-content: space-between;
 }
+.save{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+  margin: 10px;
+}
 .title {
-  width: 200px;
+  width: 180px;
   font-weight: 700;
   font-size: 20px;
   white-space: nowrap;
@@ -168,7 +175,7 @@ body {
   text-overflow: ellipsis;
 }
 .year {
-  padding-top: 10px;
+  padding-top: 15px;
   font-size: 16px;
 }
 .modal-hidden{
@@ -266,6 +273,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin: 15px;
 }
 .back{
   width: 150px;
